plugin/src/test/files/neg/not-a-trait.scala
import scalaz.meta.minimal

@minimal("foo")
class Šķira {
  def foo: Int = 1
}

@minimal("foo")
object Priekšmets {
  def foo: Int = 1
}
